syntax = "proto2";

package snapshots;

import "google/protobuf/duration.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/snapshots/config";

////////////////////////////////////////////////////////////////////////////////

message SnapshotsConfig {
    optional string DeletedSnapshotExpirationTimeout = 1 [default = "30m"];
    optional string ClearDeletedSnapshotsTaskScheduleInterval = 2 [default = "1m"];
    optional uint32 ClearDeletedSnapshotsLimit = 3 [default = 1000];
    optional string StorageFolder = 4 [default = "snapshots"];
    repeated string UseS3ForFolder = 5;
    optional uint32 UseS3Percentage = 6;
    optional bool UseProxyOverlayDisk = 7;
    optional bool RetryFailedCheckpoint = 8;
    optional bool RetryBrokenDRBasedDiskCheckpoint = 9;
}
